--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ body {
 }
 
 .container {
+  background-color: green;
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form {
   background-color: purple;
   margin: 0 auto;
   width: 800px;
@@ -37,6 +47,7 @@ body {
 }
 
 .input-name::placeholder {
+  font-family: inherit;
   color: rgb(128, 0, 128, 0.5);
 }
 
