--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   width: 900px;
   margin: 0 auto;
   padding: 20px;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -63,7 +64,7 @@ body {
 
 .input-item {
   background: none;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 800px;
   padding: 50px 150px;
   border-radius: 20px;
