--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .form {
@@ -65,6 +64,7 @@ body {
 .input-item {
   background: none;
   margin: 20px auto;
+  margin-bottom: 0;
   width: 800px;
   padding: 50px 150px;
   border-radius: 20px;
