--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 
 .form {
   background-color: rgb(52, 16, 172);
+  /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.2); */
   margin: 0 auto;
   width: 800px;
   padding: 50px 150px;
@@ -72,6 +73,7 @@ body {
   justify-content: space-between;
   font-size: 34px;
   border: 5px solid rgb(52, 16, 172);
+  /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.2); */
 }
 
 .btn-done {
