--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
   font-size: 34px;
   border: 5px solid rgb(52, 16, 172);
   /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.2); */
+  position: relative;
 }
 
 .btn-done {
@@ -84,4 +85,13 @@ body {
   width: 100px;
   border-radius: 5px;
   font-weight: bold;
+}
+
+.close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  /* height: 4.8rem; */
+  /* width: 4.8rem; */
+  /* color: #4c4012; */
 }
