--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 .container {
   background-color: white;
   width: 900px;
+  height: 90vh;
+  overflow-y: scroll;
   margin: 0 auto;
   padding: 20px;
   padding-bottom: 0;
