--- a/style.css
+++ b/style.css
@@ -89,11 +89,30 @@ body {
   font-weight: bold;
 }
 
+.btn-done:hover {
+  cursor: pointer;
+  /* background-color: green; */
+  /* border: 2px solid green; */
+}
+
 .close {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 15px;
+  top: 15px;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: plum; */
+  border-radius: 5px;
+  border: 2px solid black;
   /* height: 4.8rem; */
   /* width: 4.8rem; */
   /* color: #4c4012; */
+}
+
+.close:hover {
+  background-color: red;
+  cursor: pointer;
 }
