--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body {
   /* height: 4.8rem; */
   /* width: 4.8rem; */
   /* color: #4c4012; */
+  background-color: white;
 }
 
 .close:hover {
