--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
   /* height: 4.8rem; */
   /* width: 4.8rem; */
   /* color: #4c4012; */
-  background-color: white;
+  /* background-color: white; */
 }
 
 .close:hover {
